erDiagram
    Clinics {
        bigint id PK
        varchar name
        varchar timezone
        varchar locale
        int slotDurationMinutes
        int maxConcurrentPatients
        boolean openOnHolidays
    }

    Doctors {
        bigint id PK
        bigint clinicId FK
        varchar name
        varchar providerType
        int maxConcurrentPatients
    }

    TreatmentTypes {
        bigint id PK
        bigint clinicId FK
        varchar name
        int defaultDurationMinutes
        varchar requiredProviderType
        boolean requiresEquipment
        int maxConcurrentPatients
    }

    Equipments {
        bigint id PK
        bigint clinicId FK
        varchar name
        int usageDurationMinutes
        int quantity
    }

    Appointments {
        bigint id PK
        bigint clinicId FK
        bigint doctorId FK
        bigint treatmentTypeId FK
        bigint equipmentId FK "nullable"
        date appointmentDate
        time startTime
        time endTime
        varchar status
        instant createdAt
        instant updatedAt
    }

    OperatingHoursTable {
        bigint id PK
        bigint clinicId FK
        varchar dayOfWeek
        time openTime
        time closeTime
        boolean isActive
    }

    BreakTimes {
        bigint id PK
        bigint clinicId FK
        varchar dayOfWeek
        time startTime
        time endTime
    }

    ClinicDefaultBreakTimes {
        bigint id PK
        bigint clinicId FK
        time startTime
        time endTime
    }

    ClinicClosures {
        bigint id PK
        bigint clinicId FK
        date closureDate
        boolean isFullDay
        time startTime "nullable"
        time endTime "nullable"
    }

    DoctorSchedules {
        bigint id PK
        bigint doctorId FK
        varchar dayOfWeek
        time startTime
        time endTime
    }

    DoctorAbsences {
        bigint id PK
        bigint doctorId FK
        date absenceDate
        time startTime "nullable, null=전일"
        time endTime "nullable, null=전일"
    }

    TreatmentEquipments {
        bigint id PK
        bigint treatmentTypeId FK
        bigint equipmentId FK
    }

    EquipmentUnavailabilities {
        bigint id PK
        bigint equipmentId FK
        date startDate
        date endDate
        varchar recurrenceRule "nullable, iCal RRULE"
        json exceptions "nullable, 예외 날짜 목록"
        instant createdAt
    }

    Holidays {
        bigint id PK
        date holidayDate
        varchar name
        boolean recurring
    }

    AppointmentNotes {
        bigint id PK
        bigint appointmentId FK
        varchar note
        instant createdAt
    }

    ConsultationTopics {
        bigint id PK
        bigint appointmentId FK
        varchar topic
    }

    RescheduleCandidates {
        bigint id PK
        bigint clinicId FK
        bigint originalAppointmentId FK
        bigint newAppointmentId FK "nullable"
        varchar status
        instant createdAt
    }

    Clinics ||--o{ Doctors : "employs"
    Clinics ||--o{ TreatmentTypes : "offers"
    Clinics ||--o{ Equipments : "owns"
    Clinics ||--o{ OperatingHoursTable : "operating hours"
    Clinics ||--o{ BreakTimes : "break times"
    Clinics ||--o{ ClinicDefaultBreakTimes : "default breaks"
    Clinics ||--o{ ClinicClosures : "closures"
    Clinics ||--o{ Appointments : "receives"

    Doctors ||--o{ DoctorSchedules : "works"
    Doctors ||--o{ DoctorAbsences : "absent"
    Doctors ||--o{ Appointments : "treats"

    TreatmentTypes ||--o{ TreatmentEquipments : "requires"
    TreatmentTypes ||--o{ Appointments : "applied in"

    Equipments ||--o{ TreatmentEquipments : "used by"
    Equipments ||--o{ EquipmentUnavailabilities : "unavailable"
    Equipments |o--o{ Appointments : "used in"

    Appointments ||--o{ AppointmentNotes : "has"
    Appointments ||--o{ ConsultationTopics : "covers"
    Appointments ||--o{ RescheduleCandidates : "generates"
